Update wording for Lichess project to say 'contributed'

--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
           <small class="languages">HTML, CSS, Javascript, Scala, Bash</small>
         </header>
         <p>
-        Second-most popular chess-playing website on the internet. Added
-        automated setup of the development environment using Vagrant as well
-        as continuous integration with Travis CI, detecting multiple broken
-        builds.
+        Contributed to the second-most popular chess-playing website on the
+        internet. Added automated setup of the development environment using
+        Vagrant as well as continuous integration with Travis CI, detecting
+        multiple broken builds.
         </p>
       </section>
 
