Add LinkedIn and switch to Font Awesome
Font Awesome has icons for various websites, so I don't have to be
creative with Glyphicons anymore.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Waleed Khan's Resume</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/resume.css" />
 
   <script>
@@ -25,25 +26,25 @@
 <body>
 <div class="container">
   <header class="row resume-header">
-    <div class="col-sm-6 print-no-collapse">
+    <div class="col-sm-6 print-no-collapse name">
       <h2 class="name">Waleed Iftikhar Khan</h2>
     </div>
     <div class="col-sm-6 print-no-collapse contact-box">
       <ul class="contact-box-list well list-unstyled">
         <li>
-        <span class="glyphicon glyphicon-earphone"><!-- --></span>
+        <i class="fa fa-fw fa-phone"><!-- --></i>
         <span class="contact-item">
           (989) 928-6220
         </span>
         </li>
         <li>
-        <span class="glyphicon glyphicon-envelope"><!-- --></span>
+        <i class="fa fa-fw fa-envelope"><!-- --></i>
         <span class="contact-item">
           <a href="mailto:me@waleedkhan.name">me@waleedkhan.name</a>
         </span>
         </li>
         <li>
-        <span class="glyphicon glyphicon-globe"><!-- --></span>
+        <i class="fa fa-fw fa-stack-overflow"><!-- --></i>
         <span class="contact-item">
           <a href="http://stackoverflow.com/users/344643/waleed-khan">
             <span class="hidden-print">Stack Overflow</span>
@@ -52,11 +53,20 @@
         </span>
         </li>
         <li>
-        <span class="glyphicon glyphicon-heart"><!-- --></span>
+        <i class="fa fa-fw fa-github"><!-- --></i>
         <span class="contact-item">
           <a href="http://github.com/arxanas">
             <span class="hidden-print">Github</span>
             <span class="visible-print">github.com/arxanas</span>
+          </a>
+        </span>
+        </li>
+        <li>
+        <i class="fa fa-fw fa-linkedin"><!-- --></i>
+        <span class="contact-item">
+          <a href="https://www.linkedin.com/in/wikhan">
+            <span class="hidden-print">LinkedIn</span>
+            <span class="visible-print">linkedin.com/in/wikhan</span>
           </a>
         </span>
         </li>
