--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 <div class="container">
   <header class="row resume-header">
-    <div class="col-sm-6 print-no-collapse name">
+    <div class="col-sm-6 print-no-collapse name-container">
       <h2 class="name">Waleed Iftikhar Khan</h2>
     </div>
     <div class="col-sm-6 print-no-collapse contact-box">
