Update formatting to stack work experience vertically

--- a/index.html
+++ b/index.html
@@ -26,191 +26,191 @@
 <body>
 <div class="container">
   <header class="row resume-header">
-    <div class="col-sm-6 print-no-collapse name-container">
-      <h2 class="name">Waleed Iftikhar Khan</h2>
-    </div>
-    <div class="col-sm-6 print-no-collapse contact-box">
-      <ul class="contact-box-list well list-unstyled">
-        <li>
-        <i class="fa fa-fw fa-envelope"><!-- --></i>
-        <span class="contact-item">
-          <a href="mailto:me@waleedkhan.name">me@waleedkhan.name</a>
-        </span>
-        </li>
-        <li>
-        <i class="fa fa-fw fa-stack-overflow"><!-- --></i>
-        <span class="contact-item">
-          <a href="http://stackoverflow.com/users/344643/waleed-khan">
-            <span class="hidden-print">Stack Overflow</span>
-            <span class="visible-print">stackoverflow.com/users/344643</span>
-          </a>
-        </span>
-        </li>
-        <li>
-        <i class="fa fa-fw fa-github"><!-- --></i>
-        <span class="contact-item">
-          <a href="http://github.com/arxanas">
-            <span class="hidden-print">Github</span>
-            <span class="visible-print">github.com/arxanas</span>
-          </a>
-        </span>
-        </li>
-        <li>
-        <i class="fa fa-fw fa-linkedin"><!-- --></i>
-        <span class="contact-item">
-          <a href="https://www.linkedin.com/in/wikhan">
-            <span class="hidden-print">LinkedIn</span>
-            <span class="visible-print">linkedin.com/in/wikhan</span>
-          </a>
-        </span>
-        </li>
-      </ul>
+    <div class="row">
+      <div class="col-sm-6 print-no-collapse name-container">
+        <h2 class="name">Waleed Iftikhar Khan</h2>
+      </div>
+      <div class="col-sm-6 print-no-collapse contact-box">
+        <ul class="contact-box-list well list-unstyled">
+          <li>
+            <i class="fa fa-fw fa-envelope"><!-- --></i>
+            <span class="contact-item">
+              <a href="mailto:me@waleedkhan.name">me@waleedkhan.name</a>
+            </span>
+          </li>
+          <li>
+            <i class="fa fa-fw fa-stack-overflow"><!-- --></i>
+            <span class="contact-item">
+              <a href="http://stackoverflow.com/users/344643/waleed-khan">
+                <span class="hidden-print">Stack Overflow</span>
+                <span class="visible-print">stackoverflow.com/users/344643</span>
+              </a>
+            </span>
+          </li>
+          <li>
+            <i class="fa fa-fw fa-github"><!-- --></i>
+            <span class="contact-item">
+              <a href="http://github.com/arxanas">
+                <span class="hidden-print">Github</span>
+                <span class="visible-print">github.com/arxanas</span>
+              </a>
+            </span>
+          </li>
+          <li>
+            <i class="fa fa-fw fa-linkedin"><!-- --></i>
+            <span class="contact-item">
+              <a href="https://www.linkedin.com/in/wikhan">
+                <span class="hidden-print">LinkedIn</span>
+                <span class="visible-print">linkedin.com/in/wikhan</span>
+              </a>
+            </span>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
 
   <!-- Info -->
   <div class="info-section row">
-    <!-- Education -->
-    <div class="col-md-4 col-print-4 print-no-collapse">
-      <header>
-        <h4>Education</h4>
-      </header>
-      <ul>
-        <li>University of Michigan (Ann&nbsp;Arbor,&nbsp;MI)</li>
-        <li>B.S.E. in Computer Science (April&nbsp;2016), summa&nbsp;cum&nbsp;laude</li>
-      </ul>
+    <div class="row">
+      <!-- Education -->
+      <div class="col-md-4 col-print-4 print-no-collapse">
+        <header>
+          <h4>Education</h4>
+        </header>
+        <ul>
+          <li>University of Michigan<br />April 2016</li>
+          <li>B.S.E., Computer Science, summa&nbsp;cum&nbsp;laude</li>
+        </ul>
+      </div>
+
+      <!-- Languages -->
+      <div class="col-md-4 col-print-4 print-no-collapse">
+        <header>
+          <h4>Languages</h4>
+        </header>
+
+        <ul>
+          <li>Python, C++, Java</li>
+          <li>HTML, CSS, Javascript</li>
+          <li>PHP, Hack, MySQL</li>
+        </ul>
+      </div>
+
+      <!-- Tools -->
+      <section class="col-md-4 col-print-4 print-no-collapse">
+        <header>
+          <h4>Tools</h4>
+        </header>
+
+        <ul>
+          <li>Unix-like systems</li>
+          <li>Bash</li>
+          <li>Git, Mercurial</li>
+          <li>Make</li>
+        </ul>
+      </section>
     </div>
-
-    <!-- Languages -->
-    <div class="col-md-4 col-print-4 print-no-collapse">
-      <header>
-        <h4>Languages</h4>
-      </header>
-
-      <ul>
-        <li>Python, C++, Java</li>
-        <li>HTML, CSS, Javascript</li>
-        <li>PHP, Hack, MySQL</li>
-      </ul>
-    </div>
-
-    <!-- Tools -->
-    <section class="col-md-4 col-print-4 print-no-collapse">
-      <header>
-        <h4>Tools</h4>
-      </header>
-
-      <ul>
-        <li>Unix-like systems</li>
-        <li>Bash</li>
-        <li>Git, Mercurial</li>
-        <li>Make</li>
-      </ul>
-    </section>
   </div>
 
   <!-- Work experience -->
-  <section class="info-section">
+  <section class="info-section row">
     <header>
       <h4>Work experience</h4>
     </header>
+
+    <!-- Facebook internship -->
     <div class="row">
-      <!-- Facebook internship -->
-      <div class="col-md-4">
-        <section class="job">
-          <header class="row">
-            <div class="col-xs-6">
-              <div class="job-description">SWE Intern</div>
-              <div class="job-employer">
-                <a href="http://www.facebook.com">Facebook, Inc.</a>
-              </div>
+      <section class="job col-md-12">
+        <header class="row">
+          <div class="col-xs-6">
+            <div class="job-description">SWE Intern</div>
+            <div class="job-employer">
+              <a href="http://www.facebook.com">Facebook, Inc.</a>
             </div>
-            <div class="col-xs-6">
-              <div class="job-date hidden-print">May 2016 &ndash; Aug. 2016</div>
-              <div class="job-date visible-print">May 2016 &ndash; August 2016</div>
-              <div class="job-location">Seattle, WA</div>
-            </div>
-            <div class="col-xs-12">
-              <small class="languages">HTML, CSS, Javascript, Hack, MySQL</small>
-            </div>
-          </header>
+          </div>
+          <div class="col-xs-6">
+            <div class="job-date">May 2016 &ndash; Aug 2016</div>
+            <div class="job-location">Seattle, WA</div>
+          </div>
+          <div class="col-xs-12">
+            <small class="languages">HTML, CSS, Javascript, Hack, MySQL</small>
+          </div>
+        </header>
 
-          <ul>
-            <li>Added dependency graph visualization for internal code review
-              tool.</li>
-            <li>Combined deployment methods for configuration changes and
-              source code changes into one workflow.</li>
-            <li>Improved accessibility for test console display.</li>
-          </ul>
-        </section>
-      </div>
+        <ul>
+          <li>Added dependency graph visualization for internal code review
+            tool.</li>
+          <li>Combined deployment methods for configuration changes and
+            source code changes into one workflow.</li>
+          <li>Improved accessibility for test console display.</li>
+        </ul>
+      </section>
+    </div>
 
-      <!-- Amazon internship -->
-      <div class="col-md-4">
-        <section class="job">
-          <header class="row">
-            <div class="col-xs-6">
-              <div class="job-description">SDE Intern</div>
-              <div class="job-employer">
-                <a href="http://www.amazon.com">Amazon.com</a>
-              </div>
+    <!-- Amazon internship -->
+    <div class="row">
+      <section class="job col-md-12">
+        <header class="row">
+          <div class="col-xs-6">
+            <div class="job-description">SDE Intern</div>
+            <div class="job-employer">
+              <a href="http://www.amazon.com">Amazon.com</a>
             </div>
-            <div class="col-xs-6">
-              <div class="job-date hidden-print">May 2015 &ndash; Aug. 2015</div>
-              <div class="job-date visible-print">May 2015 &ndash; August 2015</div>
-              <div class="job-location">Seattle, WA</div>
-            </div>
-            <div class="col-xs-12">
-              <small class="languages">Java, XML, DynamoDB</small>
-            </div>
-          </header>
+          </div>
+          <div class="col-xs-6">
+            <div class="job-date">May 2015 &ndash; Aug 2015</div>
+            <div class="job-location">Seattle, WA</div>
+          </div>
+          <div class="col-xs-12">
+            <small class="languages">Java, XML, DynamoDB</small>
+          </div>
+        </header>
 
-          <ul>
-            <li>Calculated and displayed savings to customers for all digitally
-              pre-ordered items.</li>
-            <li>Provided heuristics for downstream teams to effectively triage
-              item cancellation events.</li>
-            <li>Implemented groundwork to predict large-scale pre-order release
-              events in order to scale preemptively.</li>
-          </ul>
-        </section>
-      </div>
+        <ul>
+          <li>Calculated and displayed savings to customers for all digitally
+            pre-ordered items.</li>
+          <li>Provided heuristics for downstream teams to effectively triage
+            item cancellation events.</li>
+          <li>Implemented groundwork to predict large-scale pre-order release
+            events in order to scale preemptively.</li>
+        </ul>
+      </section>
+    </div>
 
-      <!-- IA job -->
-      <div class="col-md-4">
-        <section class="job">
-          <header class="row">
-            <div class="col-xs-6">
-              <div class="job-description">Instructional Assistant</div>
-              <div class="job-employer">
-                <a href="http://www.umich.edu/">University of Michigan</a>
-              </div>
+    <!-- IA job -->
+    <div class="row">
+      <section class="job col-md-12">
+        <header class="row">
+          <div class="col-xs-6">
+            <div class="job-description">Instructional Assistant</div>
+            <div class="job-employer">
+              <a href="http://www.umich.edu/">University of Michigan</a>
             </div>
-            <div class="col-xs-6">
-              <div class="job-date hidden-print">Sept. 2014 &ndash; Apr. 2016</div>
-              <div class="job-date visible-print">September 2014 &ndash; April 2016</div>
-              <div class="job-location">Ann Arbor, MI</div>
-            </div>
-            <div class="col-xs-12">
-              <small class="languages">HTML, CSS, Javascript, PHP, Python, Perl, MySQL, Bash</small>
-            </div>
-          </header>
+          </div>
+          <div class="col-xs-6">
+            <div class="job-date">Sep 2014 &ndash; Apr 2016</div>
+            <div class="job-location">Ann Arbor, MI</div>
+          </div>
+          <div class="col-xs-12">
+            <small class="languages">HTML, CSS, Javascript, PHP, Python, Perl, MySQL, Bash</small>
+          </div>
+        </header>
 
-          <ul>
-            <li>Heavily streamlined staff workflow by overhauling
-              automatic-grading web application.</li>
-            <li>Developed automated project deployment system for rapid
-              iteration on project specifications.</li>
-            <li>Worked in teams to write homework, project specifications, and
-              exams.</li>
-          </ul>
-        </section>
-      </div>
+        <ul>
+          <li>Heavily streamlined staff workflow by overhauling
+            automatic-grading web application.</li>
+          <li>Developed automated project deployment system for rapid
+            iteration on project specifications.</li>
+          <li>Worked in teams to write homework, project specifications, and
+            exams.</li>
+        </ul>
+      </section>
     </div>
   </section>
 
   <!-- Projects -->
-  <section class="info-section">
+  <section class="info-section row">
     <header>
       <h4>
         Projects
@@ -224,12 +224,8 @@
     </header>
 
     <div class="row">
-      <section class="project col-md-3">
-        <header class="hidden-print">
-          <b><a href="http://github.com/ornicar/lila">Lichess</a></b>
-          <small class="languages">Javascript, Scala, Bash</small>
-        </header>
-        <header class="visible-print">
+      <section class="project col-md-12">
+        <header>
           <b><a href="http://github.com/ornicar/lila">Lichess</a></b>
           <small class="languages">HTML, CSS, Javascript, Scala, Bash</small>
         </header>
@@ -240,8 +236,10 @@
         multiple broken builds.
         </p>
       </section>
+    </div>
 
-      <section class="project col-md-3">
+    <div class="row">
+      <section class="project col-md-12">
         <header>
           <b><a href="http://github.com/arxanas/mtg-updater">mtg-updater</a></b>
           <small class="languages">HTML, CSS, PHP, Python</small>
@@ -252,8 +250,10 @@
         Data was downloaded more than 40,000 times over the project's lifetime.
         </p>
       </section>
+    </div>
 
-      <section class="project col-md-3">
+    <div class="row">
+      <section class="project col-md-12">
         <header>
           <b><a href="http://github.com/arxanas/drafts.ninja">drafts.ninja</a></b>
           <small class="languages">HTML, CSS, NodeJS</small>
@@ -265,8 +265,10 @@
         deck construction.
         </p>
       </section>
+    </div>
 
-      <section class="project col-md-3">
+    <div class="row">
+      <section class="project col-md-12">
         <header>
           <b><a href="http://github.com/arxanas/Cockatrice">Cockatrice</a></b>
           <small class="languages">C++, Qt</small>
