--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <h4>Education</h4>
         </header>
         <ul>
-          <li>University of Michigan<br />April 2016</li>
+          <li>University of Michigan, 2016</li>
           <li>B.S.E., Computer Science, summa&nbsp;cum&nbsp;laude</li>
         </ul>
       </div>
@@ -104,10 +104,8 @@
         </header>
 
         <ul>
-          <li>Unix-like systems</li>
-          <li>Bash</li>
+          <li>Unix-like systems, Bash</li>
           <li>Git, Mercurial</li>
-          <li>Make</li>
         </ul>
       </section>
     </div>
@@ -119,6 +117,35 @@
       <h4>Work experience</h4>
     </header>
 
+    <!-- Facebook job -->
+    <div class="row">
+      <section class="job col-md-12">
+        <header class="row">
+          <div class="col-xs-6">
+            <div class="job-description">Software Engineer</div>
+            <div class="job-employer">
+              <a href="http://www.facebook.com">Facebook, Inc.</a>
+            </div>
+          </div>
+          <div class="col-xs-6">
+            <div class="job-date">Oct 2016 &ndash; Present</div>
+            <div class="job-location">Seattle, WA</div>
+          </div>
+          <div class="col-xs-12">
+            <small class="languages">OCaml, Javascript, Hack</small>
+          </div>
+        </header>
+
+        <ul>
+          <li>Migrated the Hack programming language to the Language Server
+            Protocol, adding IDE support for most editors.</li>
+          <li>Created linting and refactoring system for Hack developers to
+            write their own lint rules and refactorings.</li>
+          <li>Improved the latency of internal OCaml IDE tooling by a factor of
+            20.</li>
+        </ul>
+      </section>
+    </div>
     <!-- Facebook internship -->
     <div class="row">
       <section class="job col-md-12">
@@ -139,11 +166,10 @@
         </header>
 
         <ul>
-          <li>Added dependency graph visualization for internal code review
+          <li>Created dependency graph visualization for internal code review
             tool.</li>
-          <li>Combined deployment methods for configuration changes and
-            source code changes into one workflow.</li>
-          <li>Improved accessibility for test console display.</li>
+          <li>Combined configuration changes and source code changes into one
+            workflow.</li>
         </ul>
       </section>
     </div>
@@ -170,10 +196,8 @@
         <ul>
           <li>Calculated and displayed savings to customers for all digitally
             pre-ordered items.</li>
-          <li>Provided heuristics for downstream teams to effectively triage
-            item cancellation events.</li>
-          <li>Implemented groundwork to predict large-scale pre-order release
-            events in order to scale preemptively.</li>
+          <li>Detected large-scale pre-order release events in order to scale
+            preemptively.</li>
         </ul>
       </section>
     </div>
@@ -202,8 +226,6 @@
             automatic-grading web application.</li>
           <li>Developed automated project deployment system for rapid
             iteration on project specifications.</li>
-          <li>Worked in teams to write homework, project specifications, and
-            exams.</li>
         </ul>
       </section>
     </div>
