Update for May 2020

--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
             <div class="job-location">Seattle, WA</div>
           </div>
           <div class="col-xs-12">
-            <small class="languages">OCaml, Javascript, Hack</small>
+            <small class="languages">OCaml, Rust, Javascript, Hack</small>
           </div>
         </header>
 
+        <p>Compiler engineer working on improving the scalability of the Hack programming language.</p>
+
         <ul>
-          <li>Implemented support for the Language Server Protocol in our
-            internal IDE.</li>
-          <li>Migrated Hack to use the Language Server Protocol, providing
-            support for all major editors.</li>
-          <li>Developed a linting system for Hack code written in Hack itself,
-            making it accessible to library/framework teams.</li>
-          <li>Developed a refactoring system suitable for monorepo-scale code
-            migrations.</li>
+          <li>Migrated Hack to use the Language Server Protocol, providing support for all major editors.
+            </li>
+          <li>Developed a linting system for Hack code written in Hack itself, now supporting hundreds of lint rules.</li>
+          <li>Developed a refactoring system suitable for monorepo-scale code migrations. Typical job time: 12hr &rarr; 15min.
+          </li>
+          <li>Developed low-latency IDE server. Worst-case startup time: 5min &rarr; 10sec.</li>
         </ul>
       </section>
     </div>
@@ -249,10 +249,10 @@
           <small class="languages">HTML, CSS, Javascript, Scala, Bash</small>
         </header>
         <p>
-        Contributed to the second-most popular chess-playing website on the
-        internet. Added automated setup of the development environment using
-        Vagrant as well as continuous integration with Travis CI, detecting
-        multiple broken builds.
+        Contributed to the second-most popular chess-playing website. Added
+        automated setup of the development environment using Vagrant as well
+        as continuous integration with Travis CI, detecting multiple broken
+        builds.
         </p>
       </section>
     </div>
@@ -282,20 +282,6 @@
         decks competitively. Added several missing features, such as
         connection indicators, backup card picks, and partially-automated
         deck construction.
-        </p>
-      </section>
-    </div>
-
-    <div class="row">
-      <section class="project col-md-12">
-        <header>
-          <b><a href="http://github.com/arxanas/Cockatrice">Cockatrice</a></b>
-          <small class="languages">C++, Qt</small>
-        </header>
-        <p>
-        Contributed to an open-source game engine. Plays trading-card games,
-        such as Magic: the Gathering, online. Written with the Qt framework
-        for C++ for GUI and networking.
         </p>
       </section>
     </div>
