Fix LinkedIn link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li>
             <i class="fa fa-fw fa-linkedin"><!-- --></i>
             <span class="contact-item">
-              <a href="https://www.linkedin.com/in/wikhan">
+              <a href="https://www.linkedin.com/in/waleedkhan000">
                 <span class="hidden-print">LinkedIn</span>
                 <span class="visible-print">linkedin.com/in/wikhan</span>
               </a>
